Add files via upload
Updated endpoints, methods and Swagger UI annotations